fix: add handleSetCID to subgraph.yaml and fix getCurrentAddresses

--- a/subgraph/subgraph.yaml
+++ b/subgraph/subgraph.yaml
@@ -88,4 +88,6 @@ dataSources:
       callHandlers:
         - function: setProposalAddresses(uint256,address[])
           handler: handleSetProposalAddresses
+        - function: setCID(string)
+          handler: handleSetCID
       file: ./generated/proposals.ts
