fix: create a valid network configuration for subgraph tests

--- a/subgraph/package.json
+++ b/subgraph/package.json
@@ -19,10 +19,10 @@
     "eslint": "eslint './**/*.{js,jsx,ts,tsx}'",
     "eslint:fix": "yarn prettier && yarn eslint --fix",
     "install-root-packages": "cd .. && yarn install && cd subgraph",
-    "precodegen": "ls networks.json || cp networks.template.json networks.json; ./configure-network.sh",
+    "precodegen": "./configure-network.sh",
     "preeslint": "yarn codegen",
     "preinstall": "yarn install-root-packages",
-    "pretest": "yarn codegen",
+    "pretest": "NETWORK=subgraphTests yarn codegen",
     "prettier": "yarn prettier:js --loglevel silent && yarn prettier:ts --loglevel silent",
     "prettier:js": "yarn prettier:js:pure './**/*.{js,jsx}'",
     "prettier:js:pure": "prettier --write",
