fix: return epoch 0 if Epoch contract is not set for Proposals contract

--- a/subgraph/subgraph.yaml
+++ b/subgraph/subgraph.yaml
@@ -85,6 +85,8 @@ dataSources:
       abis:
         - name: Proposals
           file: ./abis/Proposals.json
+        - name: Epochs
+          file: ./abis/Epochs.json
       callHandlers:
         - function: setProposalAddresses(uint256,address[])
           handler: handleSetProposalAddresses
