--- a/backend/docs/websockets-api.yaml
+++ b/backend/docs/websockets-api.yaml
@@ -55,6 +55,9 @@ channels:
                         type: string
             signature:
               type: string
+            isManuallyEdited:
+              descritpion: Whether allocation has been manually edited by user
+              type: boolean
         examples:
           - payload:
               payload:
