--- a/subgraph/package.json
+++ b/subgraph/package.json
@@ -13,6 +13,7 @@
     "clean": "docker-compose down -v && docker-compose rm -v && sudo rm -rf data/ipfs data/postgres",
     "codegen": "graph codegen",
     "create-subgraph": "graph create --node http://127.0.0.1:8020 octant",
+    "graph": "graph",
     "deploy:goerli": "graph deploy --ipfs http://127.0.0.1:5001 --node http://127.0.0.1:8020 --network goerli octant",
     "deploy:sepolia": "graph deploy --ipfs http://127.0.0.1:5001 --node http://127.0.0.1:8020 --network sepolia octant",
     "deploy:localhost": "graph deploy --ipfs http://127.0.0.1:5001 --node http://127.0.0.1:8020 octant --network localhost --version-label=v0.0.1",
