--- a/localenv/docker-compose.yaml
+++ b/localenv/docker-compose.yaml
@@ -58,16 +58,15 @@ services:
       POSTGRES_PASSWORD: let-me-in
       POSTGRES_DB: graph-node
 
-  contracts-deployer:
-    image: octant/contracts-deployer:latest
-    depends_on:
-      - anvil
+  multideployer:
+    image: octant/multideployer:latest
     networks:
       - octant
+    depends_on:
+      - anvil
+      - graph-node
     ports:
-      - '8546:8546'
-    healthcheck:
-      test: ["CMD", "curl", "-f", "localhost:8546"]
+      - '8022:8022'
     environment:
       RPC_URL: http://anvil:8545
       NETWORK: localhost
@@ -77,26 +76,16 @@ services:
       PROPOSALS_CID: QmXq3Eaz5xQF51J7mWzxDmfrVjDuGdhnirthttJ9Q2WTF8
       PROPOSALS_ADDRESSES: 0x13aB14d9f8a40a0a19f7c8Ba8B23a3F12D25fD12,0x50b641Fb1CC42bE8a292263c68f0612b8182dA51,0x519a0307b7364D21aB1227bf37689271233B3F93,0x5a873cB89BAd323b1acfd998C36aAc6b1a90a91d,0x608309bF063599DdaaF79409879917032377AC44,0x6d614D51D1Ed4eE97A37614F431771Fdb92D5Ae7,0x839a14166Af647F9DD5CdeA616c0354286Cc1593,0xBfD2704FEbD0d6A3f82Ed338731Fdf63077F76Fa,0xdE49c0928ECC3cfb5d07F69f5C82949168Fc6805,0xeAe7825257E71ba345FFcC54D0581ccE819738B9,0x13aB14d9f8a40a0a19f7c8Ba8B23a3F12D25fD12,0x50b641Fb1CC42bE8a292263c68f0612b8182dA51,0x519a0307b7364D21aB1227bf37689271233B3F93,0x5a873cB89BAd323b1acfd998C36aAc6b1a90a91d,0x608309bF063599DdaaF79409879917032377AC44,0x6d614D51D1Ed4eE97A37614F431771Fdb92D5Ae7,0x839a14166Af647F9DD5CdeA616c0354286Cc1593,0xBfD2704FEbD0d6A3f82Ed338731Fdf63077F76Fa,0xdE49c0928ECC3cfb5d07F69f5C82949168Fc6805,0xeAe7825257E71ba345FFcC54D0581ccE819738B9
 
-  subgraph-deployer:
-    image: octant/subgraph-deployer:latest
-    depends_on:
-      - contracts-deployer
-      - graph-node
-    networks:
-      - octant
-    environment:
-      CONTRACTS_DEPLOYER_URL: http://contracts-deployer:8546
-
-      NETWORK: localhost
       IPFS_URL: http://ipfs:5001
-      SUBGRAPH_URL: http://graph-node:8020
+      SUBGRAPH_ADMIN_URL: http://graph-node:8020
+      SUBGRAPH_QUERY_URL: http://graph-node:8000
 
   backend:
     image: octant/backend:latest
     ports:
       - '5000:5000'
     environment:
-      CONTRACTS_DEPLOYER_URL: http://contracts-deployer:8546
+      CONTRACTS_DEPLOYER_URL: 'http://multideployer:8022/?name=octant'
 
       OCTANT_ENV: production
       DB_URI: "postgresql://user:password@backend-postgres:5432/octant"
@@ -110,8 +99,7 @@ services:
       - backend-postgres
       - anvil
       - graph-node
-      - subgraph-deployer
-      - contracts-deployer
+      - multideployer
     networks:
       - octant
 
@@ -143,7 +131,7 @@ services:
       - backend
       - anvil
       - graph-node
-      - contracts-deployer
+      - multideployer
 
 networks:
   octant:
