--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "type-check": "tsc --noEmit true",
     "localenv:build-images": "./localenv/scripts/images.sh",
     "localenv:build-anvil": "docker build --tag octant/anvil:latest -f localenv/anvil/Dockerfile localenv/anvil",
-    "localenv:up": "docker compose -p octant -f ./localenv/docker-compose.yaml up -d",
+    "localenv:up": "docker compose -p octant -f ./localenv/docker-compose.yaml up anvil graph-postgres graph-node multideployer backend epochs-snapshotter -d",
     "localenv:down": "docker compose -p octant -f ./localenv/docker-compose.yaml down",
     "localenv:force-clean": "docker system prune --volumes -f",
     "localenv:reload": "yarn localenv:down && yarn localenv:build-images && yarn localenv:up",
