--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -61,7 +61,7 @@ default:
       when: manual
       allow_failure: true
   on_release_branch_manual:
-    - if: $CI_PIPELINE_SOURCE == "merge_request_event" && $CI_MERGE_REQUEST_SOURCE_BRANCH_NAME =~ /^release\/[0-9]+(\.[0-9]+)*(-(alpha|beta|rc)[0-9]*)?$/
+    - if: $CI_PIPELINE_SOURCE == "merge_request_event" && $CI_MERGE_REQUEST_SOURCE_BRANCH_NAME =~ /^release\/.+/
       when: manual
       allow_failure: true
   on_mr_manual:
