docs: add readme and sample deployments

--- a/epoch-verifier/package.json
+++ b/epoch-verifier/package.json
@@ -4,10 +4,13 @@
   "license": "GPL-3.0",
   "scripts": {
     "verify": "npx vite-node src/verifier.ts",
-    "verify:uat": "npx vite-node src/verifier.ts --deployment uat",
-    "verify:testnet": "npx vite-node src/verifier.ts --deployment testnet",
-    "verify:mainnet": "npx vite-node src/verifier.ts --deployment mainnet",
     "verify:custom": "npx vite-node src/verifier.ts --url",
+    "verify:help": "npx vite-node src/verifier.ts --help",
+    "verify:mainnet": "npx vite-node src/verifier.ts --deployment mainnet",
+    "verify:master": "npx vite-node src/verifier.ts --deployment master",
+    "verify:rc": "npx vite-node src/verifier.ts --deployment rc",
+    "verify:testnet": "npx vite-node src/verifier.ts --deployment testnet",
+    "verify:uat": "npx vite-node src/verifier.ts --deployment uat",
     "lint": "gts lint",
     "clean": "gts clean",
     "compile": "tsc",
