--- a/epoch-verifier/package.json
+++ b/epoch-verifier/package.json
@@ -3,7 +3,11 @@
   "version": "1.0.0",
   "license": "GPL-3.0",
   "scripts": {
-    "verify:uat": "npx ts-node src/verifier.ts",
+    "verify": "npx vite-node src/verifier.ts",
+    "verify:uat": "npx vite-node src/verifier.ts --deployment uat",
+    "verify:testnet": "npx vite-node src/verifier.ts --deployment testnet",
+    "verify:mainnet": "npx vite-node src/verifier.ts --deployment mainnet",
+    "verify:custom": "npx vite-node src/verifier.ts --url",
     "lint": "gts lint",
     "clean": "gts clean",
     "compile": "tsc",
@@ -13,15 +17,14 @@
     "posttest": "yarn run lint"
   },
   "devDependencies": {
-    "@types/chai": "^4.3.11",
-    "@types/node": "20.8.2",
+    "@types/node": "^20.11.6",
     "gts": "^5.2.0",
-    "mocha": "^10.2.0",
-    "ts-node": "^10.9.2",
-    "typescript": "~5.2.0"
+    "typescript": "~5.2.0",
+    "vite-node": "^1.2.0"
   },
   "dependencies": {
+    "axios": "^1.6.5",
     "commander": "^11.1.0",
-    "ora": "^8.0.1"
+    "spinnies": "^0.5.1"
   }
 }
