--- a/epoch-verifier/tsconfig.json
+++ b/epoch-verifier/tsconfig.json
@@ -2,7 +2,8 @@
   "extends": "../tsconfig.json",
   "compilerOptions": {
     "rootDir": ".",
-    "outDir": "dist"
+    "outDir": "dist",
+    "strictPropertyInitialization": false
   },
   "include": [
     "src/**/*.ts",
