--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -24,6 +24,7 @@ dataclass-wizard = "^0.22.2"
 flask-caching = "^2.0.2"
 eventlet = "^0.33.3"
 requests-toolbelt = "^1.0.0"
+pydantic = "^2.6.0"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.3.1"
