--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,7 +5,6 @@ variables:
   TRANSFER_METER_FREQUENCY: "2s"
   MASTER_BRANCH: "master"
   IMAGE_TAG: $CI_COMMIT_SHA
-  SECRET_WORDS: test test test test test test test test test test test junk
 
 stages:
   - build
@@ -683,6 +682,7 @@ API Tests:
     CHAIN_NAME: "localhost"
     OCTANT_BACKEND_SECRET_KEY: "some-random-key"
     OCTANT_ENV: "production"
+    SECRET_WORDS: test test test test test test test test test test test junk
   cache:
     - key: $CI_COMMIT_REF_SLUG-poetry-backend
       policy: pull
@@ -727,6 +727,7 @@ E2E Epoch 2:
     # Wait for the E2E app to become ready
     - bash $CI_PROJECT_DIR/ci/argocd/wait_for_app.sh
     - export OCTANT_BASE_URL=https://$(bash $CI_PROJECT_DIR/ci/argocd/get_web_client_url.sh)
+    - export RPC_URL=https://$(bash $CI_PROJECT_DIR/ci/argocd/get_rpc_url.sh)
     - set +e
     - yarn synpress:run || CY_EXIT_CODE=$?
     - if [[ "$CY_EXIT_CODE" == "0" ]]; then rm -r $CI_PROJECT_DIR/client/cypress/videos $CI_PROJECT_DIR/client/cypress/screenshots; fi
@@ -744,6 +745,10 @@ E2E Epoch 2:
     CYPRESS_DOCKER_RUN: "true"
     CI: "true"
     METAMASK_VERSION: "10.25.0"
+    CHAIN_ID: 1337
+    NETWORK_NAME: "Local"
+    SYMBOL: "ETH"
+    IS_TESTNET: "true"
 
 Deploy Release Candidate app:
   stage: deploy
