oct-1119 _proposalArchives test 5

--- a/ci/argocd/templates/octant-application.yaml
+++ b/ci/argocd/templates/octant-application.yaml
@@ -27,8 +27,10 @@ spec:
             value: '${WEB_CLIENT_REPLICAS:-1}'
           - name: 'webClient.alchemyId'
             value: '$VITE_ALCHEMY_ID'
-          - name: 'webClient.jsonRpcEndpoint'
+          - name: 'webClient.jsonRpcEndpoint1'
             value: '$FRONTEND_RPC_URL'
+          - name: 'webClient.jsonRpcEndpoint'
+            value: '$VITE_JSON_RPC_ENDPOINT'
           - name: 'webClient.viteNetwork'
             value: '$NETWORK_NAME'
           - name: 'webClient.hideCurrentProjectsOutsideAW'
