--- a/ci/argocd/templates/octant-application.yaml
+++ b/ci/argocd/templates/octant-application.yaml
@@ -33,6 +33,8 @@ spec:
             value: '$NETWORK_NAME'
           - name: 'webClient.hideCurrentProjectsOutsideAW'
             value: 'false'
+          - name: 'webClient.ipfsGateway'
+            value: '$IPFS_GATEWAY'
           ## Graph Node
           - name: graphNode.graph.env.NETWORK
             value: '$NETWORK_NAME'
