--- a/.github/workflows/ci-run.yml
+++ b/.github/workflows/ci-run.yml
@@ -149,7 +149,9 @@ jobs:
         export ETH_RPC_PROVIDER_URL; ETH_RPC_PROVIDER_URL=https://$(bash ${CI_PROJECT_DIR}/ci/argocd/get_rpc_url.sh)
         export SUBGRAPH_ENDPOINT; SUBGRAPH_ENDPOINT=https://$(bash ${CI_PROJECT_DIR}/ci/argocd/get_graph_url.sh)/subgraphs/name/octant
 
-        poetry run pytest --onlyapi
+        # Tests are disabled???
+        # https://gitlab.com/golemfoundation/governance/octant/-/commit/14e996ebed1fb73788e8ace045ea3b9a69bd5ca8
+        # poetry run pytest --onlyapi
       shell: bash
 
   deploy-e2e-env:
