--- a/.github/workflows/tpl-deploy-app.yml
+++ b/.github/workflows/tpl-deploy-app.yml
@@ -6,6 +6,9 @@ on:
       contracts-env-artifact-id:
         value: ${{ inputs.env-type }}-contracts-env
     inputs:
+      branch-head-ref:
+        required: true
+        type: string
       env-type:
         required: true
         type: string
@@ -159,6 +162,8 @@ jobs:
         password: "${{ secrets.GITLAB_PAT_CONTAINER_BUILDER_DOCKER_IMAGES_READ }}"
     steps:
     - uses: actions/checkout@v4.1.0
+      with:
+        ref: ${{ inputs.branch-head-ref }}
 
     - name: (debug)
       run: |
@@ -201,6 +206,9 @@ jobs:
         password: "${{ secrets.GCP_DOCKER_IMAGES_REGISTRY_SERVICE_ACCOUNT }}"
     steps:
     - uses: actions/checkout@v4.1.0
+      with:
+        ref: ${{ inputs.branch-head-ref }}
+
     - name: Deploy contracts
       run: |
         set -ex
@@ -244,6 +252,9 @@ jobs:
         password: "${{ secrets.GITLAB_PAT_CONTAINER_BUILDER_DOCKER_IMAGES_READ }}"
     steps:
     - uses: actions/checkout@v4.1.0
+      with:
+        ref: ${{ inputs.branch-head-ref }}
+
     - uses: actions/download-artifact@v4
       if: ${{ inputs.deploy-contracts }}
       with:
