--- a/.github/workflows/deploy-master.yml
+++ b/.github/workflows/deploy-master.yml
@@ -26,6 +26,7 @@ jobs:
     uses: ./.github/workflows/tpl-deploy-app.yml
     with:
       env-type: master
+      branch-head-ref: ${{ github.ref }}
       env-id: ${{ needs.run.outputs.env-id }}
       deployment-id: ${{ needs.run.outputs.deployment-id }}
       image-tag: ${{ github.sha }}
