--- a/.github/workflows/tpl-images.yml
+++ b/.github/workflows/tpl-images.yml
@@ -31,17 +31,30 @@ jobs:
         # account
         # see: https://github.com/actions/checkout/issues/211
         path: __local
-    - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v3
     - name: Login to Docker registry
       uses: docker/login-action@v3
       with:
         registry: europe-docker.pkg.dev
         username: _json_key_base64
         password: ${{ secrets.GCP_DOCKER_IMAGES_REGISTRY_SERVICE_ACCOUNT }}
+
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v3
+      with:
+        buildkitd-flags: --debug
+        driver: docker
+        config-inline: |
+          debug = true
+          insecure-entitlements = [ "network.host", "security.insecure" ]
+
+          [registry."local-docker-registry.wildland.dev:80"]
+          http = true
+          insecure = true
+
     - name: Build and push
       uses: docker/build-push-action@v5
       with:
+        allow: network.host,security.insecure
         context: __local/${{ matrix.SERVICE }}
         file: __local/ci/Dockerfile.${{ matrix.SERVICE }}
         push: true
