--- a/ci/Dockerfile.backend
+++ b/ci/Dockerfile.backend
@@ -1,4 +1,4 @@
-FROM local-docker-registry.wildland.dev/acidrain/python-poetry:3.11-slim-1.5.1
+FROM local-docker-registry.wildland.dev:80/acidrain/python-poetry:3.11-slim-1.5.1
 
 WORKDIR /app
 
