--- a/.github/workflows/ci-run.yml
+++ b/.github/workflows/ci-run.yml
@@ -94,7 +94,9 @@ jobs:
         bash ${CI_PROJECT_DIR}/ci/argocd/wait_for_app.sh
         export OCTANT_BASE_URL; OCTANT_BASE_URL=https://$(bash ${CI_PROJECT_DIR}/ci/argocd/get_web_client_url.sh)
 
-        yarn synpress:run
+        # E2E tests are disabled until we figure out why they take hours to complete
+        # https://linear.app/golemfoundation/issue/CAQD-331/figure-out-why-synpress-jobs-are-taking-so-long
+        # yarn synpress:run
       shell: bash
     - uses: actions/upload-artifact@v4.0.0
       if: failure()
