--- a/.github/workflows/ci-run.yml
+++ b/.github/workflows/ci-run.yml
@@ -79,8 +79,6 @@ jobs:
       run: |
         set -ex
 
-        exit 0
-
         export CI_PROJECT_DIR="${GITHUB_WORKSPACE}"
         source ${CI_PROJECT_DIR}/ci/argocd/resolve_env.sh $ENV_TYPE
 
@@ -96,7 +94,9 @@ jobs:
         bash ${CI_PROJECT_DIR}/ci/argocd/wait_for_app.sh
         export OCTANT_BASE_URL; OCTANT_BASE_URL=https://$(bash ${CI_PROJECT_DIR}/ci/argocd/get_web_client_url.sh)
 
-        yarn synpress:run
+        # E2E tests are disabled until we figure out why they take hours to complete
+        # https://linear.app/golemfoundation/issue/CAQD-331/figure-out-why-synpress-jobs-are-taking-so-long
+        # yarn synpress:run
       shell: bash
     - uses: actions/upload-artifact@v4.0.0
       if: failure()
@@ -149,7 +149,9 @@ jobs:
         export ETH_RPC_PROVIDER_URL; ETH_RPC_PROVIDER_URL=https://$(bash ${CI_PROJECT_DIR}/ci/argocd/get_rpc_url.sh)
         export SUBGRAPH_ENDPOINT; SUBGRAPH_ENDPOINT=https://$(bash ${CI_PROJECT_DIR}/ci/argocd/get_graph_url.sh)/subgraphs/name/octant
 
-        poetry run pytest --onlyapi
+        # Tests are disabled???
+        # https://gitlab.com/golemfoundation/governance/octant/-/commit/14e996ebed1fb73788e8ace045ea3b9a69bd5ca8
+        # poetry run pytest --onlyapi
       shell: bash
 
   deploy-e2e-env:
@@ -161,6 +163,7 @@ jobs:
     with:
       # ---
       env-type: e2e
+      branch-head-ref: ${{ github.ref }}
       image-tag: ${{ github.sha }}
       pull-request-id: ${{ github.event.pull_request.number }}
       workflow-id: ${{ github.run_id }}
@@ -187,6 +190,7 @@ jobs:
     with:
       # ---
       env-type: apitest
+      branch-head-ref: ${{ github.ref }}
       image-tag: ${{ github.sha }}
       pull-request-id: ${{ github.event.pull_request.number }}
       workflow-id: ${{ github.run_id }}
