--- a/ci/Dockerfile.client
+++ b/ci/Dockerfile.client
@@ -1,4 +1,5 @@
-FROM node:16-alpine
+FROM local-docker-registry.wildland.dev:80/library/node:16-alpine
+
 WORKDIR /app
 COPY package.json yarn.lock ./
 RUN yarn install --ignore-scripts --frozen-lockfile && yarn cache clean
