--- a/ci/Dockerfile.contracts-v1
+++ b/ci/Dockerfile.contracts-v1
@@ -1,4 +1,5 @@
-FROM node:16-alpine AS root
+FROM local-docker-registry.wildland.dev:80/library/node:16-alpine AS root
+
 WORKDIR /app
 
 FROM root AS build
