--- a/.github/workflows/tpl-destroy-env.yml
+++ b/.github/workflows/tpl-destroy-env.yml
@@ -68,9 +68,26 @@ jobs:
         echo "DEPLOYMENT_ID=$DEPLOYMENT_ID" >> $GITHUB_OUTPUT
       shell: bash
 
+    - uses: actions/github-script@v7
+      id: does-env-exist
+      if: always()
+      with:
+        result-encoding: string
+        script: |
+          try {
+            await github.rest.repos.getEnvironment({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              environment_name: '${{ steps.destroy-env.outputs.DEPLOYMENT_ID }}',
+            });
+            return 'true';
+          } catch {
+            return 'false';
+          }
+
     - name: Delete Environment
       uses: bobheadxi/deployments@v1
-      if: always() && ${{ inputs.delete-env }}
+      if: always() && ${{ steps.does-env-exist.outputs.result }} == 'true' && ${{ inputs.delete-env }}
       with:
         step: delete-env
         token: ${{ secrets.GH_BOT_TOKEN }}
@@ -78,7 +95,7 @@ jobs:
 
     - name: Deactivate Environment
       uses: bobheadxi/deployments@v1
-      if: always() && ${{ !inputs.delete-env }}
+      if: always() && ${{ steps.does-env-exist.outputs.result }} == 'true' && ${{ !inputs.delete-env }}
       with:
         step: deactivate-env
         token: ${{ secrets.GH_BOT_TOKEN }}
