--- a/.github/workflows/tpl-destroy-env.yml
+++ b/.github/workflows/tpl-destroy-env.yml
@@ -88,7 +88,7 @@ jobs:
 
     - name: Delete Environment
       uses: bobheadxi/deployments@v1
-      if: always() && ('${{ steps.does-env-exist.outputs.result }}' == 'true') && ${{ inputs.delete-env }}
+      if: ('${{ steps.does-env-exist.outputs.result }}' == 'true') && (${{ inputs.delete-env }} || '${{ github.event_name }}' == 'pull_request')
       with:
         step: delete-env
         token: ${{ secrets.GH_BOT_TOKEN }}
@@ -96,7 +96,7 @@ jobs:
 
     - name: Deactivate Environment
       uses: bobheadxi/deployments@v1
-      if: always() && ('${{ steps.does-env-exist.outputs.result }}' == 'true') && ${{ !inputs.delete-env }}
+      if: ('${{ steps.does-env-exist.outputs.result }}' == 'true') && ${{ !inputs.delete-env }}
       with:
         step: deactivate-env
         token: ${{ secrets.GH_BOT_TOKEN }}
