--- a/.github/workflows/tpl-destroy-env.yml
+++ b/.github/workflows/tpl-destroy-env.yml
@@ -88,7 +88,7 @@ jobs:
 
     - name: Delete Environment
       uses: bobheadxi/deployments@v1
-      if: ('${{ steps.does-env-exist.outputs.result }}' == 'true') && (${{ inputs.delete-env }} || '${{ github.event_name }}' == 'pull_request')
+      if: ('${{ steps.does-env-exist.outputs.result }}' == 'true') && ('${{ true && inputs.delete-env }}' == 'true' || '${{ github.event_name }}' == 'pull_request')
       with:
         step: delete-env
         token: ${{ secrets.GH_BOT_TOKEN }}
