CAQD-334: Install node16 explicitly

--- a/.github/workflows/ci-run.yml
+++ b/.github/workflows/ci-run.yml
@@ -94,6 +94,7 @@ jobs:
         # Setup NVM to use Node version 16
         set +x
         source /usr/share/nvm/init-nvm.sh
+        nvm install 16
         nvm use 16
         set -x
         npm i -g yarn
