Change VITE_IPFS_GATEWAY to VITE_IPFS_GATEWAYS in .env template

--- a/client/.env.template
+++ b/client/.env.template
@@ -4,7 +4,7 @@ VITE_CRYPTO_VALUES_ENDPOINT=https://crypto-server.octant.world/
 VITE_DEPOSITS_ADDRESS=
 VITE_EPOCHS_ADDRESS=
 VITE_GLM_ADDRESS=
-VITE_IPFS_GATEWAY=https://octant.infura-ipfs.io/ipfs/
+VITE_IPFS_GATEWAYS=https://turquoise-accused-gayal-88.mypinata.cloud/ipfs/,https://octant.infura-ipfs.io/ipfs/
 VITE_NETWORK=Sepolia
 VITE_PROPOSALS_ADDRESS=
 VITE_SERVER_ENDPOINT=http://127.0.0.1:5000
